--- a/style.css
+++ b/style.css
@@ -1,55 +1,92 @@
-<!DOCTYPE html>
-<html lang="en" dir="ltr">
-  <head>
-    <meta charset="utf-8">
-    <title>Treasure Hunt</title>
-    <link rel="icon" type="image/x-icon" href="https://cdn.iconscout.com/icon/free/png-256/bloody-1-1074606.png">
-    <link rel="stylesheet" href="treasurehunt.css">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Nosifer&display=swap" rel="stylesheet">
-  </head>
+body {
+  background-size: cover;
+  background-image: url(https://i.redd.it/6ikoho4joiw61.png);
+  background-color: rgb(0, 0, 0, 0.9);
+  color: darkred;
+  font-family: 'Nosifer', cursive;
+}
 
-  <body>
-    <h1 id="top">Treasure Hunt</h1>
-    <h2>Let's Play A Game</h2>
-    <img id="mainImage" src="	https://upload.wikimedia.org/wikipedia/commons/1/11/Billy_the_Puppet_%28Jigsaw%29_02.jpg" width=100px/>
-    <h3>Rules</h3>
-    <ul>
-      <li>Click on the boxes to begin the game</li>
-      <li>One of the boxes will set you free</li>
-      <li>One of the boxes will doom you</li>
-      <li>Choose wisely</li>
-    </ul>
-    <table>
-      <tr>
-        <td id=0 onclick = "jigSaw(0)"><img src="https://cdn.iconscout.com/icon/free/png-256/question-mark-1768084-1502257.png" width=40px/></td>
-        <td id=1 onclick = "jigSaw(1)"><img src="https://cdn.iconscout.com/icon/free/png-256/question-mark-1768084-1502257.png" width=40px/></td>
-        <td id=2 onclick = "jigSaw(2)"><img src="https://cdn.iconscout.com/icon/free/png-256/question-mark-1768084-1502257.png" width=40px/></td>
-      </tr>
-      <tr>
-        <td id=3 onclick = "jigSaw(3)"><img src="https://cdn.iconscout.com/icon/free/png-256/question-mark-1768084-1502257.png" width=40px/></td>
-        <td id=4 onclick = "jigSaw(4)"><img src="https://cdn.iconscout.com/icon/free/png-256/question-mark-1768084-1502257.png" width=40px/></td>
-        <td id=5 onclick = "jigSaw(5)"><img src="https://cdn.iconscout.com/icon/free/png-256/question-mark-1768084-1502257.png" width=40px/></td>
-      </tr>
-      <tr>
-        <td id=6 onclick = "jigSaw(6)"><img src="https://cdn.iconscout.com/icon/free/png-256/question-mark-1768084-1502257.png" width=40px/></td>
-        <td id=7 onclick = "jigSaw(7)"><img src="https://cdn.iconscout.com/icon/free/png-256/question-mark-1768084-1502257.png" width=40px/></td>
-        <td id=8 onclick = "jigSaw(8)"><img src="https://cdn.iconscout.com/icon/free/png-256/question-mark-1768084-1502257.png" width=40px/></td>
-      </tr>
-    </span>
-    </table>
-    <br/>
-    <button type="button" onclick="location.reload()">Restart Game</button>
-    <br/>
-    <br/>
-    <footer id="copyright">&copy Earl and Jack | Students |
-      <a href="#top">Back to the top</a> |
-      <a href="#copyright">Earl</a> |
-      <a href="#copyright">Jack</a>
-    </footer>
+h1 {
+  text-align: center;
+  font-size: 50px;
+  text-shadow: 2px 2px white;
+}
 
-    <script type = "text/javascript" src = "treasurehunt.js"></script>
+h2 {
+  text-align: center;
+  font-size: 35px;
+  text-shadow: 2px 2px white;
+}
 
-  </body>
-</html>
+h3 {
+  text-align: center;
+  font-size: 50px;
+  -webkit-text-stroke-width: 0.05px;
+  -webkit-text-stroke-color: white;
+}
+
+img {
+  border-style: groove;
+  border-color: brown;
+  border-radius: 50px;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 40%;
+}
+
+#mainImage {
+  border-style: groove;
+  border-color: #BBC2CC;
+  border-width: 15px;
+  border-radius: 0px;
+}
+
+ul {
+  width: 400px;
+  margin-left: auto;
+  margin-right: auto;
+  font-size: 20px;
+  -webkit-text-stroke-width: 1px;
+  -webkit-text-stroke-color: white;
+}
+
+table {
+  width: 600px;
+  height: 400px;
+  text-align: center;
+  font-size: 20px;
+  table-layout: auto;
+  background-color: black;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+td {
+  background-color: white;
+  border-color: #BBC2CC;
+  border-style: groove;
+  width: 70px;
+  height: 70px;
+}
+
+td:hover:after {
+  content: "Are you sure?";
+}
+
+button {
+  width: 150px;
+  height: 28px;
+  display: grid;
+  margin: auto;
+  text-align: center;
+  font-size: 20px;
+  color: white;
+  border: 2px solid #660000;
+  border-radius: 5px;
+  background-color: red;
+}
+
+footer {
+  text-align: center;
+}
